# gop

./: .gitignore  cli.py  client.py  main.py  pyproject.toml  requirements.txt  utils.py
app/: __init__.py  config_reader.py  constants.py  db.py  main.py  mdns.py  models.py  socket.py
app/static/: index.js  style.css
app/templates/: base.html  items.html
app/templates/partials/: item_row.html
