[project]
name = "gop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "zeroconf>=0.148.0",
]
